kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwavejs
  namespace: home-automation
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-signin: https://oauth.${PRIVATE_DOMAIN}/oauth2/start?rd=$escaped_request_uri
  #   nginx.ingress.kubernetes.io/auth-url: https://oauth.${PRIVATE_DOMAIN}/oauth2/auth
spec:
  ingressClassName: nginx
  rules:
  - host: "zwavejs.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: zwave-js-ui
            port:
              number: 8091
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "zwavejs.${DOMAIN}"
